--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>TucuShop</title>
   </head>
   <body>
@@ -46,7 +46,7 @@
           <a href="index.html">Sobre nosotros</a>
         </div>
         <div class="navbar_cont">
-          <a href="index.html">Iniciar Sesión</a>
+          <a href="../pages/login.html">Iniciar Sesión</a>
         </div>
         <div class="navbar_cont">
           <a href="index.html"
@@ -65,6 +65,6 @@
     <select id="categoria"></select>
     <br><br>
     <ul></ul>
-    <script src="index.js"></script>
+    <script src="../javascript/index.js"></script>
   </body>
 </html>
