--- a/pages/login.html
+++ b/pages/login.html
@@ -30,6 +30,7 @@
         /></a>
       </div>
     </header>
+    <br>
     <div class="container">
 		<h1>Inicio de sesión</h1>
 		<form>
@@ -37,10 +38,11 @@
 			<input type="text" id="email" name="email">
 			<label for="password">Contraseña:</label>
 			<input type="password" id="password" name="password">
-			<input type="submit" onclick="login()" value="Iniciar sesión">	
+			<button type="submit" class="login" >Iniciar sesión</button>
 		</form>
-		<p>¿Aún no tienes cuenta? <a href="#">Regístrate aquí</a></p>
-	</div>
+    <br>
+		<p><a href="../pages/registro.html">¿Aún no tienes cuenta? </a></p>
+	  </div>
     <script src="../javascript/login.js"></script>
   </body>
 </html>
