--- a/pages/admin.html
+++ b/pages/admin.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,15 +12,23 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid">
-            <img src="https://raw.githubusercontent.com/Leonardodiaz96/proyecto2-g3/dev/img-productos/logo.jpg"alt="logo" class="logopagina"/>
-        </div>
+      <div class="container-fluid">
+        <br />
+        <a href="/index.html"
+          ><img
+            src="https://raw.githubusercontent.com/Leonardodiaz96/proyecto2-g3/dev/img-productos/logo.jpg"
+            alt="logo"
+            
+        /></a>
+      </div>
     </header>    
     <h1></h1>
     <br>
     <input name="id" id="id" placeholder="Id"/>
     <br>
     <input name="codigo" id="codigo" placeholder="Codigo"/>
+    <br>
+    <input name="categoria" id="categoria" placeholder="Categoria"/>
     <br>
     <input name="nombre" id="nombre" placeholder="Nombre"/>
     <br>
@@ -38,6 +45,7 @@
         <tr>
           <th style="padding: 1rem;">Id</th>
           <th style="padding: 1rem;">Codigo</th>
+          <th style="padding: 1rem;">Categoria</th>
           <th style="padding: 1rem;">Nombre</th>
           <th style="padding: 1rem;">Precio</th>
           <th style="padding: 1rem;">Stock</th>
