--- a/pages/error404.html
+++ b/pages/error404.html
@@ -70,7 +70,7 @@
       <h2>ERROR 404 </h2>
         <img src="/img-productos/foto-error404robot.png" width="400px" alt="">
         <h1>La página que ha solicitado no se encuentra disponible</h1>
-        <a href="login.html"><button type="button" class="btn btn-light btn-lg">VOLVER ATRAS</button></a>
+        <a href="../index.html"><button type="button" class="btn btn-light btn-lg">VOLVER ATRAS</button></a>
     </div>
 
 
