--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -86,7 +86,7 @@
 
 
     </div>
-    <a href="index.html"><button class="btn-volver">VOLVER ATRAS</button></a>
+    <a href="../index.html"><button class="btn-volver">VOLVER ATRAS</button></a>
 
     
     
