--- a/pages/admin.html
+++ b/pages/admin.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/admin.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2 family=Bree+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -55,7 +55,7 @@
       </thead>
       <tbody></tbody>
     </table>
-      <footer>&copy; Todos los derechos reservados</footer>
-      <script src="/javascript/admin.js"></script>
+    <footer>&copy; Todos los derechos reservados</footer>
+    <script src="/javascript/admin.js"></script>
 </body>
 </html>
