--- a/pages/error404.html
+++ b/pages/error404.html
@@ -1,49 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/error.css">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-</head>
-<body>
-
-   <div class="h1">
-      <p>ERORR 404 - Pagina No Encontrada - Proyecto 2 </p> 
-   </div>
-
-   <div class="container">
-      <div class="div-img">    
-        <img src="/img-productos/error404.png" alt="">    -->
-        <!-- <img src="/img-productos/foto-error4042.png" width="1200px" alt="">
-      </div>
-
-
-      <div class="d-grid gap-2 col-6 mx-auto">
-         <button class="btn btn-warning" type="button">VOLVER</button>
-       </div> -->
-
-      <!-- <a href=""><button type="button" class="button btn btn-warning">Volver</button></a>
-   </div> -->
-
-    
-<!--     
-</body>
-</html> -->
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -56,25 +10,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-
-
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous">
 </head>
 
 <body>
-
     <div class="container">
-      <h2>ERROR 404 </h2>
-        <img src="/img-productos/foto-error404robot.png" width="400px" alt="">
+        <h2>ERROR 404</h2>
+        <img src="/img-productos/foto-error404robot.png" alt="">
         <h1>La página que ha solicitado no se encuentra disponible</h1>
         <a href="../index.html"><button type="button" class="btn btn-light btn-lg">VOLVER ATRAS</button></a>
     </div>
-
-
-
 </body>
 
 </html>
+
