--- a/index.html
+++ b/index.html
@@ -43,13 +43,16 @@
 
       <nav class="navbar">
         <div class="navbar_cont">
-          <a href="index.html">Sobre nosotros</a>
+          <a href="../pages/nosotros.html">Sobre nosotros</a>
         </div>
         <div class="navbar_cont">
           <a href="../pages/login.html">Iniciar Sesión</a>
         </div>
         <div class="navbar_cont">
-          <a href="index.html"
+          <a href="../pages/admin.html">Administrador</a>
+        </div>
+        <div class="navbar_cont">
+          <a href="../pages/error404.html"
             ><img
               src="https://raw.githubusercontent.com/Leonardodiaz96/proyecto2-g3/dev/img-productos/carrito.png"
               alt="carrito"
@@ -64,7 +67,7 @@
     <label>Categorias</label>
     <select id="categoria"></select>
     <br><br>
-    <ul></ul>
+    <ul><button>Detalle</button></ul>
     <script src="../javascript/index.js"></script>
   </body>
 </html>
