--- a/pages/admin.html
+++ b/pages/admin.html
@@ -49,6 +49,7 @@
           <th style="padding: 1rem;">Nombre</th>
           <th style="padding: 1rem;">Precio</th>
           <th style="padding: 1rem;">Stock</th>
+          <th style="padding: 1rem;">Detalle</th>
           <th style="padding: 1rem;">Editar</th>
           <th style="padding: 1rem;">Eliminar</th>
         </tr>
